update: 更新操作历史;